--- a/gb/22/10/19/n13848978.md
+++ b/gb/22/10/19/n13848978.md
@@ -1,26 +1,26 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加国9月核心通胀指标达6% 央行或再大幅加息</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/10/id13849172-shutterstock_106201922-600x400.jpg" />
 <h6>9月的食品零售价年同比上升11.4%。这是自1981年8月(年同比升11.9%)以来的最快增长速度。（Shutterstock)
 </h6>
 <hr>
-<p>【大纪元2022年10月20日讯】（大纪元记者周行多伦多报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>统计局周三发布的数据显示，9月份<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%A8%E5%9B%BD%E5%B9%B4%E9%80%9A%E8%83%80%E7%8E%87.md#1">全国年通胀率</a>为6.9%，低于8月的7%。不过，食品价格的升速则继续创下历史纪录。</p>
+<p>【大纪元2022年10月20日讯】（大纪元记者周行多伦多报导）加拿大统计局周三发布的数据显示，9月份全国年通胀率为6.9%，低于8月的7%。不过，食品价格的升速则继续创下历史纪录。</p>
 <p>统计局在报告中说，这已经是整体通胀连续第3个月放缓，“较低的汽油价格是（通胀）减速的主要原因”。</p>
 <p>按月比较的话，汽油价继8月下跌9.6%后，9月又下跌了7.4%。这是汽油价连续第3个月环比下跌。统计局称，与8月相比，9月全球原油供应增加，是导致汽油价下跌的一个因素。</p>
 <p>按年比较的话，9月份汽油价年同比上涨13.2%，远低于8月22.1%的升幅。</p>
 <p>统计局的报告说，如果将食品和能源排除在外，9月份的年通胀率是5.4%，稍高于8月的5.3%。</p>
 <h2>食品价格升速创41年新高</h2>
 <p>9月的食品零售价年同比上升11.4%。统计局说，这是自1981年8月（年同比升11.9%）以来的最快增长速度。“自2021年12月以来，从商店购买的食品价格，已连续10个月，以高于包括所有项目的消费者价格指数（CPI）的速度增长。”</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>9月的食品价格普遍上涨。与去年同期相比，谷类产品升17.9%，咖啡和茶升16.4%，烘焙食品升14.8%，新鲜蔬菜升11.8%，乳制品升9.7%，肉类升7.6%。</p>
+<p>加拿大9月的食品价格普遍上涨。与去年同期相比，谷类产品升17.9%，咖啡和茶升16.4%，烘焙食品升14.8%，新鲜蔬菜升11.8%，乳制品升9.7%，肉类升7.6%。</p>
 <p>统计局说，“不利的天气、化肥和天然气等重要产品的价格上涨，以及俄罗斯入侵乌克兰导致的地缘政治不稳定”，是导致食品价格上涨的原因。</p>
 <h2>汽车、家具加速升价</h2>
 <p>与去年同期相比，9月的耐用品价格升6.7%，高于8月的6.0%。统计局称，乘用车购买指数9月上涨8.4%，对该领域物价上升的贡献最大。部分原因是半导体芯片持续短缺。</p>
 <p>9月的家具价格年同比增长13.3%，高于8月的12.2%。</p>
 <p>学生的学费也在加速上升。与2021年9月的学费（年同比升1.9%）相比，今年9月的学费年同比增长了2.3%。其中增幅最大的是亚伯塔省的7.7%；纽芬兰和拉布拉多省的学费升了6.8%，原因之一是该省取消了自1999年以来实施的学费冻结。</p>
-<h2>央行将<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%81%AF.md#1">加息</a>75个基点？</h2>
-<p>加拿大央行考虑是否<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%81%AF.md#1">加息</a>的首选指标，是核心通胀（core inflation），该指标在9月是6.0%，和8月的完全一样。也就是说，央行自今年3月开始，将政策利率从0.5%调升至3.25%后，核心通胀看起来仍相当顽固。</p>
+<h2>央行将加息75个基点？</h2>
+<p>加拿大央行考虑是否加息的首选指标，是核心通胀（core inflation），该指标在9月是6.0%，和8月的完全一样。也就是说，央行自今年3月开始，将政策利率从0.5%调升至3.25%后，核心通胀看起来仍相当顽固。</p>
 <p>按经济学家的预测，央行下周将继续加息，而且力度仍会很强。</p>
 <p>据Global News报导，道明银行高级经济学家莱斯利·普雷斯顿（Leslie Preston）在一份通告中说：“整体通胀在9月份朝正确方向迈出了一小步，这很好。但核心指标带来的通胀压力无降温迹象。”</p>
 <p>她预计，央行将在10月26日调升其政策利率50个基点，并在年底前将该利率上调至4.0%。</p>
@@ -38,52 +38,41 @@
 <p>罗杰斯说，房价高意味着更多家庭将因抵押贷款而出现财务紧张。</p>
 <p>“我们现在看到的是利率在上升。在低利率水平下，高水平的债务更容易维持。”她说，“随着调升利率以对抗通胀，这些债务水平肯定会体现为金融不稳定。”</p>
 <p>责任编辑：岳怡#</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/17/n13847462.md#1">加拿大各省级政府意外获快速巨额之财</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/17/n13847473.md#1">66%的加拿大人受到通货膨胀的影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/17/n13847512.md#1">加拿大需为联邦债务支付310亿元?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/18/n13847619.md#1">素里新市长承诺恢复加拿大骑警</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/18/n13847655.md#1">加拿大看牙医 如何通过合理减少治疗程序省钱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/18/n13847660.md#1">Instagram上人气最旺的加拿大人赚多少</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/18/n13848188.md#1">加拿大海洋四省留学生人数大增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900234.md#1">加拿大强制电动车计划预计耗资1千亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900213.md#1">加国两机场将对中国航班进行污水病毒检测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900224.md#1">1月5日起?抵加中国旅客须提供COVID-19检测</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/17/n13847462.md#1">加拿大各省级政府意外获快速巨额之财</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/17/n13847473.md#1">66%的加拿大人受到通货膨胀的影响</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/17/n13847512.md#1">加拿大需为联邦债务支付310亿元?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/18/n13847619.md#1">素里新市长承诺恢复加拿大骑警</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/18/n13847655.md#1">加拿大看牙医 如何通过合理减少治疗程序省钱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/18/n13847660.md#1">Instagram上人气最旺的加拿大人赚多少</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/18/n13848188.md#1">加拿大海洋四省留学生人数大增</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278371.md#1">曼省史上17死最严重巴士车祸 检察官不予起诉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278078.md#1">加拿大财长被深度伪造 网上推荐投资机会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278020.md#1">西捷航空再次收罢工通知 最快周四取消航班</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10022923.md#1" target="_blank">宋永毅：江青和张玉凤的秘密战争</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/14/n11521196.md#1" target="_blank">美重量级参议员 要求中共停止迫害法轮功</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/20/n10232804.md#1" target="_blank">共产暴政录：精于绑票和洗劫的方志敏</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896520.md#1">【时事人物】风投神话破灭 孙正义退场之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896482.md#1">【未解之谜】憋了很久 一定要说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896885.md#1">《推背图》第五十六象奥义对应当今大疫幻变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897337.md#1">【百年真相】赔了恋人又折命 共谍关露的悲剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900752.md#1">【全球新闻】大陆火葬场弃遗骨 感染潮蔓延农村</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900273.md#1">【秦鹏观察】新年第一声雷 党媒高喊“斗争”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900365.md#1">【新闻看点】习近平被迫掉头 几个讯号令他震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898850.md#1">告别荒诞2022——北京某教授最犀利嘲讽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898823.md#1">王友群：习近平2023年面临四大挑战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899515.md#1">女网重申先解决彭帅性侵案 再考虑中国赛事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898840.md#1">范冰冰晒无名指戴巨型红宝石 被传好事近了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899526.md#1">梁朝伟戴公仔头套滑雪 获网友大赞“好可爱”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898066.md#1">加拿大新唐人将推出奇幻电影《再次成为神》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898809.md#1">黄磊确诊十多天未痊愈 透露演员老父还在医院</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13899955.md#1">KID报喜当爸爸 “亲剪脐带”全程跟拍儿子诞生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896472.md#1">增强免疫力的6种有效方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893567.md#1">研究：忧郁患者都缺“镁”这营养素不可轻忽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896469.md#1">癌症术后15年未复发 日本医生分享5秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891163.md#1">研究：吃盐太少可能和太多一样有危险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898889.md#1">预防“沉默杀手” 留意肾脏病 5大症状</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271929.md#1">大预言家的“末世预言”（上）：指向什么出路？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274439.md#1">【未解之谜】二战上校转世 他的话救了今生的父亲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271930.md#1">大预言家的“末世预言”（下）：古今妙合共振！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277236.md#1">【菁英论坛】中华民国在哪里 黄埔精神就在哪里</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277862.md#1">【时事金扫描】摧毁上百无人机 乌导弹威胁莫斯科</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277406.md#1">【新闻大家谈】美国会众院通过重磅法案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276835.md#1">三中全会政治高于经济 分析：中共全线告急</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276527.md#1">为逃离中国 三十多岁女性选择“大龄留学”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277312.md#1">美国众议院通过《法轮功保护法案》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276420.md#1">任嘉伦官宣解约A股上市公司 消息登热搜榜首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276867.md#1">史嘉蕾兴奋主演《侏罗纪4》 愿意被任何东西吃掉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276922.md#1">颂乐高雄开唱说想留在台湾 献唱张惠妹歌曲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277240.md#1">成龙代言的防毒软件卡巴斯基遭美国禁售</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276549.md#1">那英《歌手5》排名垫底 网友错愕 疑是“剧本”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276883.md#1">咖喱饭酱汁该放左边或右边？ 日本网友投票</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267943.md#1">“水果之王”榴梿药用价值高 吃后这样去异味</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272340.md#1">造成人体不舒服、生病的六种邪气（上）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277393.md#1">婚姻陷入低潮 看韩剧翻转婚姻奇迹的启示</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/19/n13848978.htm">加国9月核心通胀指标达6% 央行或再大幅加息</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/19/n13848978.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/19/n13848978.htm">加国9月核心通胀指标达6% 央行或再大幅加息</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/10/19/n13848978.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
